# Erp

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  dump.rdb  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.shared.ts
docs/: SKILL_UI_UX_KONSISTENZ.md  bauplan.md  betrieb-haertung.md  deep-research-rollenverwaltung.md  deep-research-vorsprung-2026.md  domaenen-check-textil.md  domänenmodell.md  erp-grundfunktionen.md  erp-prozessketten-audit.md  erp-ui-design.md  erpnext-anleitung.md  erpnext-aufbau-plan.md  erpnext-feature-abgleich.md  erpnext-tiefenabgleich.md  lager-artikel-bewertung.md  lastenheft-abgleich.md  lastenheft.md  (+13 more)
erpnext/texma_veredelung/: README.md  license.txt  pyproject.toml
erpnext/texma_veredelung/texma_veredelung/: hooks.py  modules.txt  patches.txt
erpnext/texma_veredelung/texma_veredelung/api/: pricing.py  routing.py  shipping.py  woocommerce.py
erpnext/texma_veredelung/texma_veredelung/config/: desktop.py
erpnext/texma_veredelung/texma_veredelung/fixtures/: custom_field.json
erpnext/texma_veredelung/texma_veredelung/texma_veredelung/doctype/logo/: logo.json  logo.py
erpnext/texma_veredelung/texma_veredelung/texma_veredelung/doctype/logo_version/: __init__.py  logo_version.json  logo_version.py
erpnext/texma_veredelung/texma_veredelung/texma_veredelung/doctype/stickerei_partner/: stickerei_partner.json  stickerei_partner.py
erpnext/texma_veredelung/texma_veredelung/texma_veredelung/doctype/veredelungspreis/: veredelungspreis.json  veredelungspreis.py
(+546 files in other folders)
