[project]
name = "texma_veredelung"
authors = [{ name = "TEXMA Textilveredelung", email = "info@texma-gmbh.de" }]
description = "TEXMA-Differenzierer als Frappe-Custom-App neben ERPNext-Standard (kein Fork)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "texma_veredelung"
